fix verticle spacing issue in minicart widget

--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_minicart.less
@@ -135,7 +135,7 @@
         float: right;
 
         .block-minicart {
-            .lib-css(padding, 25px @minicart__padding-horizontal);
+            .lib-css(padding, 25px @minicart__padding-horizontal 0);
 
             .block-title {
                 display: none;
@@ -145,7 +145,7 @@
         .product {
             .actions {
                 float: right;
-                margin: -28px 0 0;
+                margin: -28px 0 0; 
 
                 > .primary,
                 > .secondary {
